// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`provider task-envelope renderers > renders a callback-free Claude Code stream transport 1`] = `
"# Claude Code Task Envelope

## Transport

- Envelope: \`task-envelope/v1\`
- Digest: \`sha256:8e7a438fdc0475439622eee6dc2e00879466d807b6f1eddd7fe8da4160b3bc64\`
- Provider: \`claude-code\`
- Adapter: \`claude-code\`
- Runtime manifest: \`sha256:88e24bd4e81c1188c99ba752fa246b15e2cbe1610d8c7ebeb435a983e66dc348\`
- Protocol: \`fixture-runtime/v1\`
- Task: \`task_transport\`
- Attempt: \`attempt_transport\`

## Objective

Ship the provider transport

## Background

- Translate the immutable task contract without changing completion ownership.


## Constraints

- Follow the release checklist.
- Operate only inside the assigned worktree: /tmp/veritas-kanban-transport


## Workspace

- Repository: \`veritas-kanban\`
- Branch: \`feat/claude-code-transport\`
- Base branch: \`main\`
- Worktree: \`/tmp/veritas-kanban-transport\`
- Launch HEAD: \`aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa\`
- Launch state: clean

### Launch Baseline Files

- None.



## Commit Policy

Required: create at least one new commit attributable to this attempt.

## Acceptance Criteria

- The provider receives the persisted envelope.


## Allowed Side Effects

- \`filesystem-write\` within \`/tmp/veritas-kanban-transport\`
- \`process-execute\` within \`/tmp/veritas-kanban-transport\`
- \`git-commit\` within \`/tmp/veritas-kanban-transport\`
- \`network-egress\` within \`sandbox policy\`


## Expected Outputs

- Required \`text\` \`completion-summary\`: A concise summary of the completed work and remaining risks.
- Required \`commit\` \`git-commit\`: At least one new commit attributable to this attempt.


## Verification Gates

- Required \`provider-snapshot\`: Run the provider transport snapshot. Evidence is required.


## Completion Evidence Contract

- Schema: \`completion-result/v1\`
- Required \`provider-output\` \`terminal-state\`: Harness-verified provider terminal state from the native transport.
- Required \`verification\` \`verification\`: Harness-verified evidence for every required verification gate.
- Required \`commit\` \`commit\`: Harness-verified commit created after the launch baseline.




## Completion (Claude Code stream)

Return the final response through the terminal result record captured by Veritas.

Do not call the Veritas completion callback. The harness owns terminal-state capture.

No native structured-output support is assumed; Veritas validates and normalizes stream-json events."
`;

exports[`provider task-envelope renderers > renders a callback-free Codex CLI transport from a forbidden-commit envelope 1`] = `
"# Codex CLI Task Envelope

## Transport

- Envelope: \`task-envelope/v1\`
- Digest: \`sha256:e12e89c8ebe506051d179c44fd53893ea8624b7ea44f3a11de888adf35b0145e\`
- Provider: \`codex-cli\`
- Adapter: \`codex-cli\`
- Runtime manifest: \`sha256:d8ad6b2c4913ff3b21f6ce902b77cb362401ef86f32aa4f3f28cbbd9d88082c9\`
- Protocol: \`fixture-runtime/v1\`
- Task: \`task_transport\`
- Attempt: \`attempt_transport\`

## Objective

Ship the provider transport

## Background

- Translate the immutable task contract without changing completion ownership.


## Constraints

- Follow the release checklist.
- Operate only inside the assigned worktree: /tmp/veritas-kanban-transport


## Workspace

- Repository: \`veritas-kanban\`
- Branch: \`feat/codex-cli-transport\`
- Base branch: \`main\`
- Worktree: \`/tmp/veritas-kanban-transport\`
- Launch HEAD: \`aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa\`
- Launch state: clean

### Launch Baseline Files

- None.



## Commit Policy

Forbidden: do not create a commit. Leave permitted worktree changes uncommitted.

## Acceptance Criteria

- The provider receives the persisted envelope.


## Allowed Side Effects

- \`filesystem-write\` within \`/tmp/veritas-kanban-transport\`
- \`process-execute\` within \`/tmp/veritas-kanban-transport\`
- \`network-egress\` within \`sandbox policy\`


## Expected Outputs

- Required \`text\` \`completion-summary\`: A concise summary of the completed work and remaining risks.


## Verification Gates

- Required \`provider-snapshot\`: Run the provider transport snapshot. Evidence is required.


## Completion Evidence Contract

- Schema: \`completion-result/v1\`
- Required \`provider-output\` \`terminal-state\`: Harness-verified provider terminal state from the native transport.
- Required \`verification\` \`verification\`: Harness-verified evidence for every required verification gate.




## Completion (Codex CLI process)

Return the final response through the process output captured by Veritas.

Do not call the Veritas completion callback. The harness owns terminal-state capture.

No native structured-output support is assumed; Veritas validates and normalizes process output."
`;

exports[`provider task-envelope renderers > renders a callback-free Codex SDK transport from an allowed-commit envelope 1`] = `
"# Codex SDK Task Envelope

## Transport

- Envelope: \`task-envelope/v1\`
- Digest: \`sha256:a9aa614dee26324078c21a97e8821292b9b7fc1f42ec80db3320e3d440c20f8f\`
- Provider: \`codex-sdk\`
- Adapter: \`codex-sdk\`
- Runtime manifest: \`sha256:a0d6c0f07b4c24419c37b4526f183951db10d5c6ec9bf3451f2daa1ef7cf368a\`
- Protocol: \`fixture-runtime/v1\`
- Task: \`task_transport\`
- Attempt: \`attempt_transport\`

## Objective

Ship the provider transport

## Background

- Translate the immutable task contract without changing completion ownership.


## Constraints

- Follow the release checklist.
- Operate only inside the assigned worktree: /tmp/veritas-kanban-transport


## Workspace

- Repository: \`veritas-kanban\`
- Branch: \`feat/codex-sdk-transport\`
- Base branch: \`main\`
- Worktree: \`/tmp/veritas-kanban-transport\`
- Launch HEAD: \`aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa\`
- Launch state: clean

### Launch Baseline Files

- None.



## Commit Policy

Allowed: a commit is permitted, but successful completion does not require one.

## Acceptance Criteria

- The provider receives the persisted envelope.


## Allowed Side Effects

- \`filesystem-write\` within \`/tmp/veritas-kanban-transport\`
- \`process-execute\` within \`/tmp/veritas-kanban-transport\`
- \`git-commit\` within \`/tmp/veritas-kanban-transport\`
- \`network-egress\` within \`sandbox policy\`


## Expected Outputs

- Required \`text\` \`completion-summary\`: A concise summary of the completed work and remaining risks.


## Verification Gates

- Required \`provider-snapshot\`: Run the provider transport snapshot. Evidence is required.


## Completion Evidence Contract

- Schema: \`completion-result/v1\`
- Required \`provider-output\` \`terminal-state\`: Harness-verified provider terminal state from the native transport.
- Required \`verification\` \`verification\`: Harness-verified evidence for every required verification gate.




## Completion (Codex SDK stream)

Return the final response through the SDK event stream captured by Veritas.

Do not call the Veritas completion callback. The harness owns terminal-state capture.

No native structured-output support is assumed; Veritas validates and normalizes SDK stream events."
`;

exports[`provider task-envelope renderers > renders a callback-free Codex app-server transport 1`] = `
"# Codex app-server Task Envelope

## Transport

- Envelope: \`task-envelope/v1\`
- Digest: \`sha256:752997c167a25a9ec8781076a8e8c093d6b9f1fdf269c18797f346bfdb1de341\`
- Provider: \`codex-app-server\`
- Adapter: \`codex-app-server\`
- Runtime manifest: \`sha256:d5a32f42bfe25fc1a2d4e93a35b31f1cded947bfbf24041b8fd96ebd86c299a3\`
- Protocol: \`fixture-runtime/v1\`
- Task: \`task_transport\`
- Attempt: \`attempt_transport\`

## Objective

Ship the provider transport

## Background

- Translate the immutable task contract without changing completion ownership.


## Constraints

- Follow the release checklist.
- Operate only inside the assigned worktree: /tmp/veritas-kanban-transport


## Workspace

- Repository: \`veritas-kanban\`
- Branch: \`feat/codex-app-server-transport\`
- Base branch: \`main\`
- Worktree: \`/tmp/veritas-kanban-transport\`
- Launch HEAD: \`aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa\`
- Launch state: clean

### Launch Baseline Files

- None.



## Commit Policy

Required: create at least one new commit attributable to this attempt.

## Acceptance Criteria

- The provider receives the persisted envelope.


## Allowed Side Effects

- \`filesystem-write\` within \`/tmp/veritas-kanban-transport\`
- \`process-execute\` within \`/tmp/veritas-kanban-transport\`
- \`git-commit\` within \`/tmp/veritas-kanban-transport\`
- \`network-egress\` within \`sandbox policy\`


## Expected Outputs

- Required \`text\` \`completion-summary\`: A concise summary of the completed work and remaining risks.
- Required \`commit\` \`git-commit\`: At least one new commit attributable to this attempt.


## Verification Gates

- Required \`provider-snapshot\`: Run the provider transport snapshot. Evidence is required.


## Completion Evidence Contract

- Schema: \`completion-result/v1\`
- Required \`provider-output\` \`terminal-state\`: Harness-verified provider terminal state from the native transport.
- Required \`verification\` \`verification\`: Harness-verified evidence for every required verification gate.
- Required \`commit\` \`commit\`: Harness-verified commit created after the launch baseline.




## Completion (Codex app-server stream)

Return the final response through the terminal turn/completed notification captured by Veritas.

Do not call the Veritas completion callback. The harness owns terminal-state capture.

No native structured-output support is assumed; Veritas validates and normalizes JSON-RPC notifications."
`;

exports[`provider task-envelope renderers > renders a callback-free Hermes scripted transport 1`] = `
"# Hermes Task Envelope

## Transport

- Envelope: \`task-envelope/v1\`
- Digest: \`sha256:61f6a557435b2ec3fabc10cf9ef6a190b8bb882910fe6ada1855597b8b119215\`
- Provider: \`hermes-cli\`
- Adapter: \`hermes-cli\`
- Runtime manifest: \`sha256:105fc11b1236086a7d0181f73ac7201e519ef667c27ad7f7b71d44a28ee4360c\`
- Protocol: \`fixture-runtime/v1\`
- Task: \`task_transport\`
- Attempt: \`attempt_transport\`

## Objective

Ship the provider transport

## Background

- Translate the immutable task contract without changing completion ownership.


## Constraints

- Follow the release checklist.
- Operate only inside the assigned worktree: /tmp/veritas-kanban-transport


## Workspace

- Repository: \`veritas-kanban\`
- Branch: \`feat/hermes-cli-transport\`
- Base branch: \`main\`
- Worktree: \`/tmp/veritas-kanban-transport\`
- Launch HEAD: \`aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa\`
- Launch state: clean

### Launch Baseline Files

- None.



## Commit Policy

Required: create at least one new commit attributable to this attempt.

## Acceptance Criteria

- The provider receives the persisted envelope.


## Allowed Side Effects

- \`filesystem-write\` within \`/tmp/veritas-kanban-transport\`
- \`process-execute\` within \`/tmp/veritas-kanban-transport\`
- \`git-commit\` within \`/tmp/veritas-kanban-transport\`
- \`network-egress\` within \`sandbox policy\`


## Expected Outputs

- Required \`text\` \`completion-summary\`: A concise summary of the completed work and remaining risks.
- Required \`commit\` \`git-commit\`: At least one new commit attributable to this attempt.


## Verification Gates

- Required \`provider-snapshot\`: Run the provider transport snapshot. Evidence is required.


## Completion Evidence Contract

- Schema: \`completion-result/v1\`
- Required \`provider-output\` \`terminal-state\`: Harness-verified provider terminal state from the native transport.
- Required \`verification\` \`verification\`: Harness-verified evidence for every required verification gate.
- Required \`commit\` \`commit\`: Harness-verified commit created after the launch baseline.




## Completion (Hermes scripted process)

Return the final response through scripted stdout captured by Veritas.

Do not call the Veritas completion callback. The harness owns terminal-state capture.

No native structured-output support is assumed; Veritas validates and normalizes scripted process output."
`;

exports[`provider task-envelope renderers > renders an OpenClaw callback transport from a required-commit envelope 1`] = `
"# OpenClaw Task Envelope

## Transport

- Envelope: \`task-envelope/v1\`
- Digest: \`sha256:6fb7e306ba5d86aa966cc32814ac2ae33915b7c55c68a8455171ff6a7a795c0f\`
- Provider: \`openclaw\`
- Adapter: \`openclaw\`
- Runtime manifest: \`sha256:be3844c45a6aef384fb2c6d8dd0e15365b9cd06170272607396278beb052db68\`
- Protocol: \`fixture-runtime/v1\`
- Task: \`task_transport\`
- Attempt: \`attempt_transport\`

## Objective

Ship the provider transport

## Background

- Translate the immutable task contract without changing completion ownership.


## Constraints

- Operate only inside the assigned worktree: /tmp/veritas-kanban-transport


## Workspace

- Repository: \`veritas-kanban\`
- Branch: \`feat/openclaw-transport\`
- Base branch: \`main\`
- Worktree: \`/tmp/veritas-kanban-transport\`
- Launch HEAD: \`aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa\`
- Launch state: clean

### Launch Baseline Files

- None.



## Commit Policy

Required: create at least one new commit attributable to this attempt.

## Acceptance Criteria

- The provider receives the persisted envelope.


## Allowed Side Effects

- \`filesystem-write\` within \`/tmp/veritas-kanban-transport\`
- \`process-execute\` within \`/tmp/veritas-kanban-transport\`
- \`git-commit\` within \`/tmp/veritas-kanban-transport\`
- \`network-egress\` within \`sandbox policy\`


## Expected Outputs

- Required \`text\` \`completion-summary\`: A concise summary of the completed work and remaining risks.
- Required \`commit\` \`git-commit\`: At least one new commit attributable to this attempt.


## Verification Gates

- Required \`provider-snapshot\`: Run the provider transport snapshot. Evidence is required.


## Completion Evidence Contract

- Schema: \`completion-result/v1\`
- Required \`provider-output\` \`terminal-state\`: Harness-verified provider terminal state from the native transport.
- Required \`verification\` \`verification\`: Harness-verified evidence for every required verification gate.
- Required \`commit\` \`commit\`: Harness-verified commit created after the launch baseline.


## Profile Instructions (agent profile)

Follow the release checklist.


## Resume Context (task checkpoint)

- Resume count: 1
- Captured at: 2026-07-23T20:45:00.000Z
- Last step: 2

\`\`\`json
{
  "next": "dispatch"
}
\`\`\`

Continue from this checkpoint. Do not repeat work already represented in the saved state.


## Completion (OpenClaw callback)

When the work reaches a terminal state, report it to Veritas.

- Endpoint: \`POST http://localhost:3001/api/agents/task_transport/complete\`

\`\`\`bash
curl -X POST http://localhost:3001/api/agents/task_transport/complete \\
  -H "Content-Type: application/json" \\
  -d '{"attemptId":"attempt_transport","providerRuntimeManifestDigest":"sha256:be3844c45a6aef384fb2c6d8dd0e15365b9cd06170272607396278beb052db68","success":true,"summary":"Brief description of what was done"}'
\`\`\`

For failure, send \`success: false\` and include an \`error\` message.

No native structured-output support is assumed; Veritas validates and normalizes the callback."
`;
